# learn-opengl

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: windows.yml
base/: CMakeLists.txt  camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.h  window.cpp  window.h
examples/: CMakeLists.txt  config.h.in
examples/cameras/: cameras.cpp
examples/coordinate_systems/: coordinate_systems.cpp
examples/models/: models.cpp
examples/shaders/: shaders.cpp
examples/textures/: textures.cpp
examples/transformations/: transformations.cpp
examples/triangle/: triangle.cpp
src/: CMakeLists.txt  importable.cxx  main.cxx
